--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "7.9.4",
-    "@origin/token-transfer-server": "file:../server",
+    "@trusttoken/token-transfer-server": "file:../server",
     "@sentry/browser": "5.15.4",
     "@svgr/webpack": "5.3.0",
     "babel-eslint": "10.1.0",
@@ -42,6 +42,7 @@
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "2.1.1",
     "lodash.get": "4.4.2",
+    "magic-sdk": "^1.2.0",
     "mini-css-extract-plugin": "0.9.0",
     "moment": "2.24.0",
     "node-sass": "^4.13.1",
@@ -81,7 +82,7 @@
     "lint": "eslint '**/*.js' && npm run prettier:check",
     "prettier": "prettier --write \"src/**/*.js\" \"test/**/*.js\"",
     "prettier:check": "prettier -c \"src/**/*.js\" \"test/**/*.js\"",
-    "start": "webpack-dev-server",
+    "start": "NODE_ENV=development webpack-dev-server",
     "clean": "git clean -fd .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
