--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,15 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "7.9.4",
-    "@trusttoken/token-transfer-server": "file:../server",
     "@sentry/browser": "5.15.4",
     "@svgr/webpack": "5.3.0",
+    "@trusttoken/token-transfer-server": "file:../server",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-named-asset-import": "0.3.6",
     "bignumber": "1.1.0",
+    "bignumber.js": "^9.0.0",
     "bootstrap": "4.4.1",
     "camelcase": "5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -36,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "3.0.0",
+    "ethers": "^4.0.47",
     "file-loader": "6.0.0",
     "fs-extra": "9.0.0",
     "html-webpack-plugin": "4.0.3",
@@ -65,6 +67,7 @@
     "resolve-url-loader": "^3.1.1",
     "sass-loader": "8.0.2",
     "style-loader": "1.1.3",
+    "styled-components": "^5.1.0",
     "superagent": "5.2.2",
     "swiper": "5.3.6",
     "terser-webpack-plugin": "2.3.5",
