updated manifest.json and page title

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "T3",
-  "name": "Origin Investor Portal",
+  "short_name": "TTEP",
+  "name": "TrustToken Ecosystem Portal",
   "icons": [
     {
       "src": "favicon.ico",
