hopefully fix magic key env var

--- a/client/.env.production
+++ b/client/.env.production
@@ -2,3 +2,4 @@ UNLOCK_DATE=2019-01-01
 API_URL=https://tt-ecosystem-portal-api.herokuapp.com
 TEAM_API_URL=https://tt-ecosystem-portal-api.herokuapp.com
 INVESTOR_API_URL=https://tt-ecosystem-portal-api.herokuapp.com
+MAGIC_PUBLISHABLE_KEY=pk_live_B9A9C5C4A74FF64A
