added favicon to docker build

--- a/Dockerfile.fe.prod
+++ b/Dockerfile.fe.prod
@@ -13,5 +13,6 @@ RUN yarn build
 FROM nginx:1.15.2-alpine
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=client /app/client/build /usr/share/nginx/html
+COPY --from=client /app/client/public/favicon.ico /user/share/nginx/html
 CMD sed -i -e 's/$PORT/'"$PORT"'/g' /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'
 EXPOSE $PORT
