--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "ethers": "^4.0.47",
     "file-loader": "6.0.0",
     "fs-extra": "9.0.0",
+    "html-loader": "0.5.5",
     "html-webpack-plugin": "4.0.3",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "2.1.1",
