magic link wallet address being created in db on login, still needs testing

--- a/server/.env.development
+++ b/server/.env.development
@@ -8,5 +8,5 @@ EARLY_LOCKUPS_ENABLED_UNTIL=2020-04-15
 CLIENT_URL=http://localhost:3000/#
 UNLOCK_DATE=2019-01-01
 LOG_LEVEL=DEBUG
-DATABASE_URL=postgres://iwqsrptp:Hk2RZ-d2_c7zIOewNbCb4Cvlj15M_hV9@drona.db.elephantsql.com:5432/iwqsrptp
+DATABASE_URL=postgresql://dannydalton@localhost/ecosystem-portal-dev
 MAGIC_SECRET_KEY=sk_test_D5F50AE192CC05CD
