--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "chart.js": "2.9.3",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-to-clipboard": "^3.3.1",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
