--- a/server/package.json
+++ b/server/package.json
@@ -32,8 +32,8 @@
     "body-parser": "^1.19.0",
     "connect-sqlite3": "^0.9.11",
     "cors": "^2.8.5",
-    "csvtojson": "^2.0.10",
     "csv-parse": "^4.8.9",
+    "csvtojson": "^2.0.10",
     "envkey": "^1.2.7",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
@@ -72,7 +72,9 @@
     "chai-bignumber": "3.0.0",
     "chai-moment": "0.1.0",
     "mocha": "7.1.1",
-    "nodemon": "2.0.2"
+    "nodemon": "2.0.2",
+    "sinon-chai": "^3.5.0",
+    "supertest": "^4.0.2"
   },
   "prettier": {
     "semi": false,
