--- a/server/package.json
+++ b/server/package.json
@@ -32,8 +32,8 @@
     "body-parser": "^1.19.0",
     "connect-sqlite3": "^0.9.11",
     "cors": "^2.8.5",
-    "csvtojson": "^2.0.10",
     "csv-parse": "^4.8.9",
+    "csvtojson": "^2.0.10",
     "envkey": "^1.2.7",
     "eslint": "^6.8.0",
     "express": "^4.17.1",
@@ -58,7 +58,9 @@
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.1",
     "sinon": "^9.0.1",
+    "sinon-chai": "^3.5.0",
     "superagent": "^5.2.2",
+    "supertest": "^4.0.2",
     "thirty-two": "^1.0.2",
     "web3": "1.2.6"
   },
