--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,10 @@
 server {
     listen $PORT;
 
+    location =/favicon.ico {
+        root /usr/share/nginx/html/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
