--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,6 @@
     "@babel/preset-react": "7.9.4",
     "@sentry/browser": "5.15.4",
     "@svgr/webpack": "5.3.0",
-    "@trusttoken/token-transfer-server": "file:../server",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
@@ -46,7 +45,6 @@
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "2.1.1",
     "lodash.get": "4.4.2",
-    "magic-sdk": "^1.2.0",
     "mini-css-extract-plugin": "0.9.0",
     "moment": "2.24.0",
     "node-sass": "^4.13.1",
@@ -60,6 +58,7 @@
     "react-dom": "16.13.1",
     "react-ga": "2.7.0",
     "react-id-swiper": "3.0.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
     "react-svg-loader": "3.0.3",
@@ -79,7 +78,6 @@
     "web3-utils": "^1.2.6",
     "webpack": "4.42.1",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "3.10.3",
     "webpack-subresource-integrity": "^1.4.0"
   },
   "scripts": {
@@ -137,5 +135,8 @@
   "eslintIgnore": [
     "node_modules",
     "public"
-  ]
+  ],
+  "devDependencies": {
+    "webpack-dev-server": "^3.10.3"
+  }
 }
