--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "7.9.4",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@sentry/browser": "5.15.4",
     "@svgr/webpack": "5.3.0",
     "babel-eslint": "10.1.0",
