--- a/client/package.json
+++ b/client/package.json
@@ -58,7 +58,8 @@
     "react-bootstrap": "1.0.0",
     "react-chartjs-2": "2.9.0",
     "react-dom": "16.13.1",
-    "react-ga": "2.7.0",
+    "react-ga": "^3.1.2",
+    "react-gtm-module": "^2.0.10",
     "react-id-swiper": "3.0.0",
     "react-lottie": "^1.2.3",
     "react-redux": "7.2.0",
